# structai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
structai/: __init__.py  io.py  judge.py  llm_api.py  mp.py  openai_server.py  pdf.py  server.py  skill.py  utils.py
